Finalisation du projet, mutex bien gerer, gg wp

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: ttiprez <ttiprez@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/11/20 17:58:06 by ttiprez           #+#    #+#              #
-#    Updated: 2026/01/20 12:01:05 by ttiprez          ###   ########.fr        #
+#    Updated: 2026/01/21 16:57:48 by ttiprez          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,21 +27,19 @@ HEADERS_DIR	= include
 
 # Fichiers sources
 SRCS		= $(SRC_DIR)/error_management.c		\
-			  $(SRC_DIR)/philo_actions.c		\
-			  $(SRC_DIR)/hypervisor.c			\
-			  $(SRC_DIR)/philo.c				\
-			  $(SRC_DIR)/utils.c				\
-			  $(SRC_DIR)/main.c					\
-			  $(SRC_DIR)/fork.c
-
-# Fichiers objets
-OBJS		= $(OBJ_DIR)/error_management.o		\
-			  $(OBJ_DIR)/philo_actions.o		\
-			  $(OBJ_DIR)/hypervisor.o			\
-			  $(OBJ_DIR)/philo.o				\
-			  $(OBJ_DIR)/utils.o				\
-			  $(OBJ_DIR)/main.o					\
-			  $(OBJ_DIR)/fork.o
+			  $(SRC_DIR)/philo_actions.c		 \
+			  $(SRC_DIR)/hypervisor.c			  \
+			  $(SRC_DIR)/philo.c				   \
+			  $(SRC_DIR)/utils.c				    \
+			  $(SRC_DIR)/main.c					     \
+			  $(SRC_DIR)/fork.c					      \
+OBJS		= $(OBJ_DIR)/fork.o					      \
+			  $(OBJ_DIR)/main.o					     \
+			  $(OBJ_DIR)/utils.o				    \
+			  $(OBJ_DIR)/philo.o				   \
+			  $(OBJ_DIR)/hypervisor.o			  \
+			  $(OBJ_DIR)/philo_actions.o		 \
+			  $(OBJ_DIR)/error_management.o		\
 
 # Couleur
 RED			= \033[0;31m
